// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`@rollup/plugin-replace\` can accepts custom options: \`@rollup/plugin-replace\` can accepts custom options dist/index.js 1`] = `
"'use strict';

{
  console.log('prod');
}

let a = 27;

{
  a--;
}

console.log(a);
"
`;

exports[`Typescript: Typescript dist/index.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function greeter(person) {
  return 'Hello, ' + person.firstName + ' ' + person.lastName;
}

let user = {
  firstName: 'Jane',
  lastName: 'User'
};
let s = greeter(user);

exports.s = s;
"
`;

exports[`async: async dist/index.js 1`] = `
"'use strict';

function _async(f) {
  return function () {
    for (var args = [], i = 0; i < arguments.length; i++) {
      args[i] = arguments[i];
    }

    try {
      return Promise.resolve(f.apply(this, args));
    } catch (e) {
      return Promise.reject(e);
    }
  };
}

const a = {
  a: 1
};
var index = _async(function () {
  return Object.assign({}, a, {
    b
  });
});

module.exports = index;
"
`;

exports[`babel:disable-config: babel:disable-config dist/index.js 1`] = `
"'use strict';

class index {}

module.exports = index;
"
`;

exports[`babel:object-rest-spread: babel:object-rest-spread dist/index.js 1`] = `
"'use strict';

var index = Object.assign({}, a);

module.exports = index;
"
`;

exports[`babel:with-config: babel:with-config dist/index.js 1`] = `
"'use strict';

class index {}

module.exports = index;
"
`;

exports[`banner:object: banner:object dist/default.js 1`] = `
"/*!
 * name v1.2.3
 * (c) author
 * Released under the GPL License.
 */
'use strict';

var _default = {};

module.exports = _default;
"
`;

exports[`banner:string: banner:string dist/default.js 1`] = `
"woot
'use strict';

var _default = {};

module.exports = _default;
"
`;

exports[`banner:true default: banner:true default dist/index.js 1`] = `
"/*!
 * foo v0.0.0
 * (c) name <email@email.com>
 * Released under the MIT License.
 */
'use strict';

var index = 42;

module.exports = index;
"
`;

exports[`bundle-node-modules: bundle-node-modules dist/index.js 1`] = `
"'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var all = _interopDefault(require('some-package-that-does-not-exists'));

var pokemon = ['pikachu'];

var index = {
  all,
  pokemon
};

module.exports = index;
"
`;

exports[`custom rollup plugin: custom rollup plugin dist/index.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

const tt = 'is there anything?';

function afun() {
  return tt;
}

function another() {
  return afun();
}

exports.another = another;
"
`;

exports[`custom scoped rollup plugin: custom scoped rollup plugin dist/index.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

const tt = 'is there anything?';

function afun() {
  return tt;
}

function another() {
  return afun();
}

exports.another = another;
"
`;

exports[`defaults: defaults dist/index.js 1`] = `
"'use strict';

var index = 42;

module.exports = index;
"
`;

exports[`exclude file: exclude file dist/index.js 1`] = `
"'use strict';

var foo = 'foo';

module.exports = foo;
"
`;

exports[`extendOptions: extendOptions dist/bar.js 1`] = `
"'use strict';

var bar = 'bar';

module.exports = bar;
"
`;

exports[`extendOptions: extendOptions dist/bar.umd.js 1`] = `
"(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global = global || self, global.umd = factory());
}(this, (function () { 'use strict';

	var bar = 'bar';

	return bar;

})));
"
`;

exports[`extendOptions: extendOptions dist/bar.umd.min.js 1`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):(e=e||self).min=n()}(this,(function(){\\"use strict\\";return\\"bar\\"}));
"
`;

exports[`extendOptions: extendOptions dist/foo.js 1`] = `
"'use strict';

var foo = 'foo';

module.exports = foo;
"
`;

exports[`extendOptions: extendOptions dist/foo.umd.js 1`] = `
"(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global = global || self, global.umd = factory());
}(this, (function () { 'use strict';

	var foo = 'foo';

	return foo;

})));
"
`;

exports[`extendOptions: extendOptions dist/foo.umd.min.js 1`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):(e=e||self).min=n()}(this,(function(){\\"use strict\\";return\\"foo\\"}));
"
`;

exports[`inline-certain-modules: inline-certain-modules dist/index.js 1`] = `
"'use strict';

var fakeModule = a => a;

var index = fakeModule(1);

module.exports = index;
"
`;

exports[`target:browser: target:browser dist/index.js 1`] = `
"'use strict';

var foo = 'browser';

module.exports = foo;
"
`;

exports[`uglify: uglify dist/index.min.js 1`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});exports.a=1;
"
`;

exports[`umd and iife should drop process.env.NODE_ENV: umd and iife should drop process.env.NODE_ENV dist/index.iife.js 1`] = `
"var dropNodeEnv = (function (exports) {
  'use strict';

  exports.a = '';
  exports.b = '';

  {
    exports.a = 'live in dev';
  }

  {
    exports.b = 'live in dev';
  }

  return exports;

}({}));
"
`;

exports[`umd and iife should drop process.env.NODE_ENV: umd and iife should drop process.env.NODE_ENV dist/index.iife.min.js 1`] = `
"var dropNodeEnv=function(r){\\"use strict\\";return r.a=\\"\\",r.b=\\"\\",r.a=\\"live in prod\\",r.b=\\"live in prod\\",r}({});
"
`;

exports[`umd and iife should drop process.env.NODE_ENV: umd and iife should drop process.env.NODE_ENV dist/index.umd.js 1`] = `
"(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = global || self, factory(global.dropNodeEnv = {}));
}(this, (function (exports) { 'use strict';

  exports.a = '';
  exports.b = '';

  {
    exports.a = 'live in dev';
  }

  {
    exports.b = 'live in dev';
  }

  Object.defineProperty(exports, '__esModule', { value: true });

})));
"
`;

exports[`umd and iife should drop process.env.NODE_ENV: umd and iife should drop process.env.NODE_ENV dist/index.umd.min.js 1`] = `
"!function(e,o){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?o(exports):\\"function\\"==typeof define&&define.amd?define([\\"exports\\"],o):o((e=e||self).dropNodeEnv={})}(this,(function(e){\\"use strict\\";e.a=\\"\\",e.b=\\"\\",e.a=\\"live in prod\\",e.b=\\"live in prod\\",Object.defineProperty(e,\\"__esModule\\",{value:!0})}));
"
`;

exports[`umd and iife should preserve existing env.NODE_ENV: umd and iife should preserve existing env.NODE_ENV dist/index.iife.js 1`] = `
"var dropNodeEnv = (function (exports) {
  'use strict';

  exports.a = '';
  exports.b = '';

  {
    exports.a = 'live in prod';
  }

  {
    exports.b = 'live in prod';
  }

  return exports;

}({}));
"
`;

exports[`umd and iife should preserve existing env.NODE_ENV: umd and iife should preserve existing env.NODE_ENV dist/index.iife.min.js 1`] = `
"var dropNodeEnv=function(r){\\"use strict\\";return r.a=\\"\\",r.b=\\"\\",r.a=\\"live in prod\\",r.b=\\"live in prod\\",r}({});
"
`;

exports[`umd and iife should preserve existing env.NODE_ENV: umd and iife should preserve existing env.NODE_ENV dist/index.umd.js 1`] = `
"(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = global || self, factory(global.dropNodeEnv = {}));
}(this, (function (exports) { 'use strict';

  exports.a = '';
  exports.b = '';

  {
    exports.a = 'live in prod';
  }

  {
    exports.b = 'live in prod';
  }

  Object.defineProperty(exports, '__esModule', { value: true });

})));
"
`;

exports[`umd and iife should preserve existing env.NODE_ENV: umd and iife should preserve existing env.NODE_ENV dist/index.umd.min.js 1`] = `
"!function(e,o){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?o(exports):\\"function\\"==typeof define&&define.amd?define([\\"exports\\"],o):o((e=e||self).dropNodeEnv={})}(this,(function(e){\\"use strict\\";e.a=\\"\\",e.b=\\"\\",e.a=\\"live in prod\\",e.b=\\"live in prod\\",Object.defineProperty(e,\\"__esModule\\",{value:!0})}));
"
`;

exports[`vue plugin: vue plugin dist/component.css 1`] = `
"
.main-content[data-v-5fccef39]{margin:0 auto;font-family:sans-serif;background-color:#ccf7e2;padding:10px;border-radius:5px;max-width:500px
}"
`;

exports[`vue plugin: vue plugin dist/component.js 1`] = `
"'use strict';

//
//
//
//
//
//
//
var script = {
  name: 'main-content',
  data: () => ({
    name: 'Bili !'
  })
};

function normalizeComponent(template, style, script, scopeId, isFunctionalTemplate, moduleIdentifier
/* server only */
, shadowMode, createInjector, createInjectorSSR, createInjectorShadow) {
  if (typeof shadowMode !== 'boolean') {
    createInjectorSSR = createInjector;
    createInjector = shadowMode;
    shadowMode = false;
  } // Vue.extend constructor export interop.


  var options = typeof script === 'function' ? script.options : script; // render functions

  if (template && template.render) {
    options.render = template.render;
    options.staticRenderFns = template.staticRenderFns;
    options._compiled = true; // functional template

    if (isFunctionalTemplate) {
      options.functional = true;
    }
  } // scopedId


  if (scopeId) {
    options._scopeId = scopeId;
  }

  var hook;

  if (moduleIdentifier) {
    // server build
    hook = function hook(context) {
      // 2.3 injection
      context = context || // cached call
      this.$vnode && this.$vnode.ssrContext || // stateful
      this.parent && this.parent.$vnode && this.parent.$vnode.ssrContext; // functional
      // 2.2 with runInNewContext: true

      if (!context && typeof __VUE_SSR_CONTEXT__ !== 'undefined') {
        context = __VUE_SSR_CONTEXT__;
      } // inject component styles


      if (style) {
        style.call(this, createInjectorSSR(context));
      } // register component module identifier for async chunk inference


      if (context && context._registeredComponents) {
        context._registeredComponents.add(moduleIdentifier);
      }
    }; // used by ssr in case component is cached and beforeCreate
    // never gets called


    options._ssrRegister = hook;
  } else if (style) {
    hook = shadowMode ? function () {
      style.call(this, createInjectorShadow(this.$root.$options.shadowRoot));
    } : function (context) {
      style.call(this, createInjector(context));
    };
  }

  if (hook) {
    if (options.functional) {
      // register for functional component in vue file
      var originalRender = options.render;

      options.render = function renderWithStyleInjection(h, context) {
        hook.call(context);
        return originalRender(h, context);
      };
    } else {
      // inject component registration as beforeCreate hook
      var existing = options.beforeCreate;
      options.beforeCreate = existing ? [].concat(existing, hook) : [hook];
    }
  }

  return script;
}

var normalizeComponent_1 = normalizeComponent;

/* script */
const __vue_script__ = script; // For security concerns, we use only base name in production mode. See https://github.com/vuejs/rollup-plugin-vue/issues/258

script.__file = \\"component.vue\\";
/* template */

var __vue_render__ = function () {
  var _vm = this;

  var _h = _vm.$createElement;

  var _c = _vm._self._c || _h;

  return _c('div', {
    staticClass: \\"main-content\\"
  }, [_c('h1', [_vm._v(\\"This is your first component in Vue\\")]), _vm._v(\\" \\"), _c('h3', [_vm._v(_vm._s(_vm.name))])]);
};

var __vue_staticRenderFns__ = [];
/* style */

const __vue_inject_styles__ = undefined;
/* scoped */

const __vue_scope_id__ = \\"data-v-5fccef39\\";
/* module identifier */

const __vue_module_identifier__ = undefined;
/* functional template */

const __vue_is_functional_template__ = false;
/* style inject */

/* style inject SSR */

var component = normalizeComponent_1({
  render: __vue_render__,
  staticRenderFns: __vue_staticRenderFns__
}, __vue_inject_styles__, __vue_script__, __vue_scope_id__, __vue_is_functional_template__, __vue_module_identifier__, undefined, undefined);

module.exports = component;
"
`;
